[EDIT] Update routes and documentation
